Fixed menu items being shifted due to insufficent space

--- a/css/screen.css
+++ b/css/screen.css
@@ -449,7 +449,7 @@ footer div p.caption{
 
 
 /* ================ 600px Break Point 1: Extra small ================ */
-@media screen and (min-width: 37.5em) { 
+@media screen and (min-width: 37.8em) { 
 
   /* Navigation items */
   .navitemlist{
